# ChangeLog for dev-cpp/libebt
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libebt/ChangeLog,v 1.28 2007/04/23 20:54:53 armin76 Exp $

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> libebt-1.3.0.ebuild:
  Add ~ia64

  20 Apr 2007; Markus Rothe <corsair@gentoo.org> libebt-1.3.0.ebuild:
  Added ~ppc64

  28 Feb 2007; Javier Villavicencio <the_paya@gentoo.org>
  libebt-1.3.0.ebuild:
  Added ~x86-fbsd keyword.

  03 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> libebt-1.3.0.ebuild:
  Stable on MIPS; bug #164487

  31 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org> libebt-1.3.0.ebuild:
  Stable on ppc wrt bug #164487.

  30 Jan 2007; Andrej Kacian <ticho@gentoo.org> libebt-1.3.0.ebuild:
  Stable on x86, bug #164487.

  30 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> libebt-1.3.0.ebuild:
  Stable on sparc wrt #164487

  30 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> ChangeLog:
  Marked stable on amd64.

  30 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> libebt-1.3.0.ebuild:
  Stable on Alpha as per bug #164487

  30 Jan 2007; Jeroen Roovers <jer@gentoo.org> libebt-1.3.0.ebuild:
  Stable for HPPA (bug #164487).

  18 Nov 2006; Tiziano Müller <dev-zero@gentoo.org>
  +files/libebt-1.3.0-as-needed.patch, -libebt-1.2.1.ebuild,
  -libebt-1.2.2.ebuild, libebt-1.3.0.ebuild:
  Added as-needed patch, bug #155462 thanks to drizzt. Added 'test' USE-flag
  to track boost-dependency for testing. Dropped old versions.

*libebt-1.3.0 (26 Jan 2006)

  26 Jan 2006; Ciaran McCreesh <ciaranm@gentoo.org> +libebt-1.3.0.ebuild:
  New version.

  20 Jan 2006; Ciaran McCreesh <ciaranm@gentoo.org> -libebt-1.1.0.ebuild,
  -libebt-1.2.0.ebuild:
  Tidy up old versions

*libebt-1.2.2 (20 Jan 2006)

  20 Jan 2006; Ciaran McCreesh <ciaranm@gentoo.org> +libebt-1.2.2.ebuild:
  New version

  16 Jan 2006; Aaron Walker <ka0ttic@gentoo.org> libebt-1.2.1.ebuild:
  Added ~mips.
